# controlador

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
src/: main.rs  network.rs  protocol.rs  ui.rs
src/platform/: macos.rs  mod.rs  windows.rs
tests/: network_tests.rs  platform_tests.rs  protocol_tests.rs
